playing around with homemade permutation algorithm
trying to see if it's faster then naokis...

--- a/makefile.valgrind
+++ b/makefile.valgrind
@@ -17,6 +17,7 @@ CPPSRC	= main.cpp\
            MPO.cpp\
            Environment.cpp\
            contractions.cpp\
+			  Perm.cpp\
            btas_defs.cpp
 
 OBJ	= $(CPPSRC:.cpp=.o)
