--- a/makefile.intel
+++ b/makefile.intel
@@ -17,6 +17,7 @@ CPPSRC	= main.cpp\
            MPO.cpp\
            Environment.cpp\
            contractions.cpp\
+			  Trotter.cpp\
            btas_defs.cpp
 
 OBJ	= $(CPPSRC:.cpp=.o)
