a bit of cleaning of the code
moved 'test' functions to namespace debug

--- a/makefile.intel
+++ b/makefile.intel
@@ -19,6 +19,7 @@ CPPSRC	= main.cpp\
            contractions.cpp\
 			  Trotter.cpp\
 			  propagate.cpp\
+			  debug.cpp\
            btas_defs.cpp
 
 OBJ	= $(CPPSRC:.cpp=.o)
