trying to remove overhead of parallelized program

--- a/makefile.gcc
+++ b/makefile.gcc
@@ -20,6 +20,7 @@ CPPSRC	= main.cpp\
 			  Trotter.cpp\
 			  propagate.cpp\
 			  debug.cpp\
+			  memory.cpp\
            btas_defs.cpp
 
 OBJ	= $(CPPSRC:.cpp=.o)
