--- a/makefile.valgrind
+++ b/makefile.valgrind
@@ -43,7 +43,7 @@ CXX	= clang++
 # -----------------------------------------------------------------------------
 #   Compiler & Linker flags
 # -----------------------------------------------------------------------------
-CFLAGS	= -I$(INCLUDE) -g -std=c++11 -D_HAS_CBLAS -D_HAS_LAPACKE
+CFLAGS	= -I$(INCLUDE) -g -std=c++11 -D_DEBUG -D_HAS_CBLAS -D_HAS_LAPACKE
 LDFLAGS	= -g
 
 # =============================================================================
